[gd_scene load_steps=2 format=3 uid="uid://g51i4ys84bxs"]

[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_2myg8"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_2myg8")

[node name="Options" type="VBoxContainer" parent="."]
offset_right = 326.0
offset_bottom = 644.0

[node name="MSLabel" type="Label" parent="Options"]
offset_right = 326.0
offset_bottom = 26.0
text = "Mouse Sensitivity (50)"

[node name="MouseSensitivity" type="HSlider" parent="Options"]
offset_top = 30.0
offset_right = 326.0
offset_bottom = 46.0
min_value = 1.0
value = 50.0

[node name="Keybinds" type="Button" parent="Options"]
offset_top = 50.0
offset_right = 326.0
offset_bottom = 81.0
text = "Change Keybinds"

[node name="GameModes" type="VBoxContainer" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -343.0
grow_horizontal = 0
grow_vertical = 2

[node name="SelectGamemode" type="Label" parent="GameModes"]
offset_right = 343.0
offset_bottom = 26.0
text = "Select Gamemode"
horizontal_alignment = 2

[node name="Lobby" type="Button" parent="GameModes"]
offset_top = 30.0
offset_right = 343.0
offset_bottom = 61.0
text = "Lobby"

[node name="KeybindsMenu" type="ScrollContainer" parent="."]
process_mode = 4
visible = false
custom_minimum_size = Vector2(100, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="KeybindsList" type="VBoxContainer" parent="KeybindsMenu"]

[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="changed" from="Options/MouseSensitivity" to="." method="_on_mouse_sensitivity_changed"]
[connection signal="drag_ended" from="Options/MouseSensitivity" to="." method="_on_mouse_sensitivity_drag_ended"]
[connection signal="pressed" from="Options/Keybinds" to="." method="_on_keybinds_pressed"]
